[DACAS] last version of the documents

--- a/doc/cours/workshop/20160201_DACAS1/main.tex
+++ b/doc/cours/workshop/20160201_DACAS1/main.tex
@@ -25,52 +25,75 @@
 
 \section{Introduction}
 
-In this paper we present how some people studying and characterizing human cities and their development, are successfully using concepts and tools initially developed to study the scaling properties of biological organism and briefly explain why the analogy used to transpose those concept from Biology to Social Sciences is relevant despite some critics. We finally advocate that those study should be put in a historical perspective and that Archeology and History should play a central role if we want to achieve this and propose as a case study a research project in which this approach, coupled with simple model and simulation, could help us to understand the nature of the economy of the Roman Empire.
+In this paper we present how some people studying and characterizing human cities and their development, are successfully using concepts and tools initially developed to study the scaling properties of biological organism. We briefly explain why the analogy used to transpose those concept from Biology to Social Sciences is relevant despite some critics and give some hint on how different view of evolution could solve those problems. We finally advocate that those studies should be put in a historical perspective and that Archaeology and History should play a central role if we want to achieve this. We propose as a case study a research project in which this approach, coupled with simple model and simulation, could help us to understand the nature of the economy of the Roman Empire.
 
 
 \section{Scalings Properties of Cities}
-Scaling properties are one of the most striking regularities found in Nature. It has been decades then that biologists have observed that the size of organisms is correlated with the rate of their metabolism, their speed and other physiological measurement~\citep{schmidtnielsen1984scalingwhyisanimalsizesoimportant}. Since, more example have been shown and researcher have looked for the origin of such properties. Among the, \cite{west1999thefourthdimensionoflifefractalgeometryandallometricscalingoforganisms}
+Scaling properties are one of the most striking regularities found in Nature. It has been decades then that biologists have observed that size of organisms is correlated with rate of their metabolism, speed and other physiological measurements~\citep{schmidtnielsen1984scalingwhyisanimalsizesoimportant}. Since, more example have been shown and researcher have looked for the origin of such properties. Among them, \cite{west1999thefourthdimensionoflifefractalgeometryandallometricscalingoforganisms}
 have advanced that Natural Selection could play a leading role as it:
 \begin{quote}
-    `` tended to maximize both metabolic capacity, by maximizing the scaling of exchange surface areas, and internal efficiency, by minimizing the scaling of transport distances and times.'' 
+    ``has tended to maximize both metabolic capacity, by maximizing the scaling of exchange surface areas, and internal efficiency, by minimizing the scaling of transport distances and times.'' 
 \end{quote}
 
-Thus, they propose Darwinian Evolution as one of the main reason for these particular design and that these ``[\ldots]design principles are independent of detailed dynamics and explicit models and should apply to  virtually all organisms''(\emph{ibid.})
+Thus, they propose Darwinian Evolution as one of the main reason for these particular design and that these ``[\ldots]design principles are independent of detailed dynamics and explicit models and should apply to  virtually all organisms''(\emph{ibid.}).
 
-In parallel to those advances in biology, the idea that cities are living organisms and that they should be studied (and planned) with an evolutionary perspective is far from being a new  one (see for example: \cite{geddes1915citiesinevolution} and  \cite{batty2009theevolutionofcitiesgeddesabercrombieandthenewphysicalism} for a more detailed review on the history of this idea). It is then not surprising if soon the study of those scaling properties have been quickly extended to cities.
+In parallel to those advances in biology, the idea that cities are living organisms and that they should be studied (and planned) through an evolutionary perspective is far from being a new  one (see for example: \cite{geddes1915citiesinevolution} and  \cite{batty2009theevolutionofcitiesgeddesabercrombieandthenewphysicalism} for a more detailed review on the history of this idea). It is then not surprising if soon the study of those scaling properties have been extended to cities.
+Among the first that have linked those concepts, \cite{batty2008thesizescaleandshapeofcities,bettencourt2007growthinnovationscalingandthepaceoflifeincities} have discussed and analysed some of those properties. \cite{batty2008thesizescaleandshapeofcities} looked at the relations between the size of cities and the size of the building in those cities as well as the relation between subspace within the cities and the rate of employment or the population employed within those subspaces.
+\cite{bettencourt2007growthinnovationscalingandthepaceoflifeincities} have studied a lot of different properties for different cities, ranging from the number of patent produced, the total employment, the number of gasoline station or even the road surface, to the number of serious crimes in a city. They have shown how every attribute measured respond to different scaling regimes.  They argue that the different scaling regimes measured can help us understand the nature of the process that have led to the observed scaling properties. In other word, by measuring social, economical, infrastructural, cultural, technological attributes of cities, one can infer the kind of social, economical, cultural, technological processes driving the development of such attributes.
 
-\cite{batty2008thesizescaleandshapeofcities,bettencourt2007growthinnovationscalingandthepaceoflifeincities} have discussed and analysed some of those properties. \cite{batty2008thesizescaleandshapeofcities} have looked to the relations between the size of cities and the size of the building in those cities as well as the relation between subspace within the cities and the rate of employment or the population employed within those subspaces.
-\cite{bettencourt2007growthinnovationscalingandthepaceoflifeincities} have studied of lot of different properties of different cities, such as the number of patent produced, the total employment, the number of gasoline station, the road surface or even the number of serious crimes. They have shown how every properties respond to different scaling regimes.  They argue that the different scaling regimes measured can help us understand the nature of the process that have led to the observed repartition. In other word, by measuring social, economical, infrastructural, cultural, technological attributes of cities, one can infer the kind of social, economical, cultural, technological processes driving the development of such attributes.
+The success of those study led \cite{bettencourt2010aunifiedtheoryofurbanliving} as as well as \cite{batty2013theory}, to urge for the creation of a theory of cities built on such approach.
 
-Following those studies, \cite{bettencourt2010aunifiedtheoryofurbanliving} as \cite{batty2013theory}, have both urged for the creation of a theory of cities build on such observations.
-
-At another level, \cite{hou2010energeticbasisofcoloniallivinginsocialinsects} have shown how the study of such scaling properties can indeed unveil the nature of social interaction at some simple biological level, given again more credit to such approach.
+At another level, \cite{hou2010energeticbasisofcoloniallivinginsocialinsects} have shown how such scaling properties can indeed unveil the nature of social interaction at some ``simpler'' biological scale, given again more credit to such approach.
 Studying ant colonies they illustrate how some scaling properties observed at the colony level are made possible thanks to the nature of the social interaction involved inside the colony.
 This nicely support the idea that using scaling effects to study socio-cultural systems is fruitful and that it can help us to understand the socio-economic relations and properties governing such system. 
 
 
-Nonetheless, in more recent studies \citep{arcaute2015constructingcitiesdeconstructingscalinglaws} some concerns have been raised that the way cities are defined is far more difficult than biological individuals , and that could prevent us to make any assumption on their scaling properties. 
+Nonetheless, in more recent studies \citep{arcaute2015constructingcitiesdeconstructingscalinglaws} some concerns have been raised that defining the limits of cities is far more difficult than defining the limits of biological individuals, and that this border problem could prevent us to make any assumption on the scaling properties of cities. 
 
-We argue that if such critics have to be seriously considered, they should not prevent us from working within the biological framework, but otherwise to push farther the analogy with evolutionary biology. Indeed, if it seems easy to define what an individual is when one look at the organisms traditionally studied in evolutionary biology (bacterias, mice, human or bees), it is not so clear for an important part of other entities in the living world (the famous example of the quaking aspen and its 1000 trees that are only clones of one ``individual'', is one among others, \emph{cf.}~\cite{bouchard2011darwinismwithoutpopulationsamoreinclusiveunderstandingofsotf}).
-Indeed, more recent work on organisms coming from different biological reigns have shown that the scaling properties of those different organisms \emph{are} different \citep{delong2010shiftsinmetabolicscalingproductionandefficiencyacrossmajorevolutionarytransitionsoflife}. This difference suggest that the scaling properties underline the major evolutionary transitions as described for example by \cite{maynardsmith1997major}. In turn it shows that if one want to integrate the studies of cities into an evolutionary framework, one as to go farther than a too restrictive Darwinian position and work with broader approaches that encompass wider types of evolutionary mechanisms acting on wider kind of individuals (as proposed for instance by : \cite{godfrey2009darwinian} or \cite{jablonka2014evolution}). 
+We argue that if such critics have to be seriously considered, they should not prevent us from working within the biological framework and otherwise to push farther the analogy with evolutionary biology and no just stick on general conception of evolutionary theory. Indeed, if it seems easy to define what an individual is when one look at the organisms traditionally studied in evolutionary biology (bacteria, mice, human or bees), it is not so clear for an important part of other entities in the living world (the famous example of the quaking aspen and its 1000 trees that are only clones of one ``individual'', is one among others, \emph{cf.}~\cite{bouchard2011darwinismwithoutpopulationsamoreinclusiveunderstandingofsotf}).
+Indeed, more recent work on organisms coming from different biological reigns have shown that the scaling properties of those different organisms \emph{are} different \citep{delong2010shiftsinmetabolicscalingproductionandefficiencyacrossmajorevolutionarytransitionsoflife}. This difference suggests that the scaling properties underline the major evolutionary transitions as described for example by \cite{maynardsmith1997major}. In turn it shows that if one want to integrate the studies of cities into an evolutionary framework, one as to go farther than a too restrictive Darwinian position and work with broader approaches that encompass wider types of evolutionary mechanisms acting on wider kind of individuals (as proposed for instance by : \cite{godfrey2009darwinian} or \cite{jablonka2014evolution}). 
 
 
-\section{Historical Perspective}
+\section{Historical Perspective \& Modelisation}
 
 Given the observation made that some socio-economical properties of a cities can be linked to demographic and infrastructure measurement, \cite{ortman2014theprehistoryofurbanscaling} have pushed forward the idea: if one can study dynamics of nowadays cities using there scaling properties, one should be ``able to infer aggregate socio-economic properties of ancient societies from archaeological measures of settlement organization''. 
 
-We  want to follow this line of research and we argue that while looking to the properties as urbanisation is about destructing. Only figged state of the cities and not a the dynamic of the process. Moreover it's impossible. So one SHOULD look to archaeological evidence. 
+We want to follow this line of research. Moreover, to understand how cities evolve and develop and the origin of the infrastructural and economical properties that we observe \citep{bettencourt2013theoriginsofscalingincities}, we cannot just look at the properties of such cities in one point in time.   
+To achieve a more complete understanding of the dynamic of the cities we think that it is mandatory to compare the properties of cities at a broader time scales: it is the only way to determine the evolutionary trajectories of the dynamics driving the development of cities.
 
-We propose here that the study of the correlation between socio-economic properties and size of cities from past societies could help us: (1) to characterize the economical and cultural dynamics that have allowed the emergence of such properties in the studied society and (2) gives us a framework to study the evolution of such properties across the ages and between different human societies.
+Doing so could help us to bring new knowledge at least at two levels:
+\begin{enumerate}
+\item The understanding of the dynamics of evolution of cities \emph{per se}, across the ages and the civilisations. In a way consistent with the call made by \cite{bettencourt2007growthinnovationscalingandthepaceoflifeincities,batty2013theory} to create a theory of cities and urban living.
+    \item To propose hypothesis about the nature of the socio-economics process involved during past societies, to compare it to nowadays societies and answer to historical questions.
+\end{enumerate}
+
+To achieve this enterprise, the only alternative is to look to historical and archaeological data. But this raise some concern as archaeological and historical records are incomplete and biased. Thus, the hypothesis drawn upon the observed scaling properties of past society could be difficult to validate. This problem is strengthened when the hypothesis have been formulate to answer historical question.
+
+To illustrate this kind of situation we want to focus on the case of the economy of the Ancient Rome, as developed within the project of \cite{remesal2014epnet}. One major problem about the study of Roman Economy is that direct evidence of economic transactions have almost all disappeared, as they were mostly recorded on wax tablet. In such conditions, historians rely on scarce and indirect evidences of the economic activity (amphora, ship wreck, cities infrastructures organisation\ldots) and they are used to use such scare evidence to draw hypotheses about the Roman economic activity. 
+
+In this context, the focus on the scaling properties of what remains from Roman Cities could help us to characterize in a very quantifiable way (which is rarely the case in traditionally historical research activity) some key properties.
+As shown in the previous section, those scaling properties can in turn help us to understand the underlying principle that have led to these observation by comparing them with observed properties of today cities, properties that could be link to socio-economical principles.
+
+But to go beyond the mere characterization of those principles and to give more accurate and elaborate explanations of the historical process, one cannot only rely on a general comparison between scaling properties of nowadays cities and past settlements, moreover if the two processes highly differ. 
+When the goal is to validate or not a hypothesis made by historian about a precise part of the Roman Economy, quantify the impact of the hypotheses with a simple comparison with nowadays observations doesn't seem as straightforward.
+
+Modelisation and computer model could be good candidates to articulate this measure of the scaling properties of cities with the generation and the testing of hypothesis about historical problem and the validation of such formulation.
+
+In the case of the roman economy, a promising modelling approach is the one we develop in \cite{carrignon2015modellingthecoevolutionoftradeandcultureinpastsocieties}. In this model, economic dynamics are led by simple cultural processes. It allows to put economy in a minimal evolutionary framework where economical aspect are seen as a particular social information. Using simple model of social and cultural transition we can measure and compare the resulting economic dynamics. 
+
+The design of the model aims for a trade-off between the flexibility necessary for the implementation of multiple assumption and hypothesis made at different socio-economic level and the structure necessary for the comparison between the hypotheses and assumptions implemented. It has been shown to already exhibit the scaling properties observed in the distribution of simple, neutral cultural artefact \citep{bentley2004randomdriftandculturechange}.
 
 
+We think that such model is well suited to make the link between the test and the generation of different hypotheses about the socio-economical activity in the Roman Empire and the comparison and validation of such hypotheses with the scaling properties measured in Roman cities from the Roman Empire and actual cities. 
 
-At the same time we think that if the scaling properties can help you to characterize and compare the processes that originated the observation, the precise description of such process is difficile. Moreover when one want to characterise past process, such as ancient economy, from which few remains. To palliate this we propose that simple computer model, 
+Using the model we develop \citep{carrignon2015modellingthecoevolutionoftradeandcultureinpastsocieties}, data about the size of cities during the Roman ages that we found in \cite{chandler1987four} and all the data made available from the project of \cite{remesal2014epnet} (among what are available a huge amount of information about the producers of amphora collected in cities all around the Roman Empire), we hope to give a new way to explore and understand the nature of the economy of the Roman Empire.
 
 
-We want to present a case study \cite{carrignon2015modellingthecoevolutionoftradeandcultureinpastsocieties} Scaling properies and scaling laws are the one that could be used to compare such model in order to validate or not, hyoppthese on the causes of the scaling properties
+\section{Conclusion}
 
-As part of the EPNet project \citep{remesal2014epnet} we hope to fretfully apply this approach to better study and characterized the nature of the Roman Economy.
+We have shown that the study of the scaling properties is a nice way to quantify and study the principle underlying the development of cities throughout the world. By extending this framework to past societies it gives us tools to infer the nature of process from indirect byproduct of the process we want to study ; without the need of the direct description of it.  
+
+We propose to bring such tools to study the Economy of the Roman Empire.  By coupling it with modelisation and simulation methods, we hope to provide a full set of tool that will allow to generate test and validate hypotheses about important and difficult historical question such as the nature of the economy and the socio-cultural processes involved  during the Roman Empire.
 
 
 \bibliographystyle{apalike}
