[UPF] 10 conf abstract 7

--- a/doc/cours/PRBBSeminar/abstracs.tex
+++ b/doc/cours/PRBBSeminar/abstracs.tex
@@ -153,7 +153,75 @@ The key mechanism is that the social environment exposes people to activities an
 (note also sur le carnet)
 
 
-\section{ABSTRAC RIN4}
+\section{ABSTRACT: Intelectual Disability }
+21st of avril
+    \item Seminar Title: Rembrandt: Remodelling brain development in intellectual disability 
+    \item Speaker: Mara Dierssen
+    \item Date: 20/04/2016
+    \item Abstract:Down syndrome (DS) is the most common genetic form of intellectual disability, with an estimated incidence of more than 200,000 cases per year worldwide. In DS brain, suboptimal network architecture and altered synaptic communication arising from neurodevelopmental impairment are key determinants of cognitive defects. Regardless of their molecular cause, most DSs are characterized by neural plasticity disruption, and therefore this is a natural target for therapeutic purposes. Our group has demonstrated that epigallocatechin-3-gallate (EGCG), the most abundant catechin of green tea, promotes learning and memory recovery, produces extensive dendritic remodeling in DS mouse models and significantly improves memory, executive functions and adaptive behavior along with increased functional connectivity in specific brain regions of DS adults (Phase I and Phase II clinical trials). This has been a crucial step in treating intellectual disability that has opened new important questions. 
+\end{itemize}
+
+Neuroscience pharmacology. Neuropharmacology.
+An abandoned place. Because company are still in the neural doctrine. Nerone are the unit of computation of the brain.
+
+Ramon y cajal and Sherrington .
+
+Mental function arise from overlapping neural network in temporal syncrony. Many to many connexion connectivity matrices.
+
+Lorente nó already say that the design is recurrent and this recurrence allow functional reverberation.
+
+Circuit fine tuned by plasticity
+
+Trisomy 21 down syndrome cognitive phenotype.
+
+Pathological morphology: input and output problems-> define of the connectivity matrices .
+Less dendric spines the tree is less dense.
+
+Find the protein that pose problem. Dyrk1A
+
+Concentration of this protine is important too much or to less is bad
+German patterson desin mathematical model to see the dosage effect.
+Once slotted the protein what happen at the physiological level?
+Difiremce on oscillations?
+Up and down oscillaty state.from physiology oscillatory state to the behavior.
+
+Hypotheses about GABA the inhibitory path.
+
+Less inhibitory content so wrong hypotheses? So should come from something else.
+At the network level.using a mathematical model about conductivity
+The model show that by less inhibitory is sufficient to reduce gamma stouf. Tough work.
+Now we know how to recreate back the phenotypes.
+
+Plasticity can change the connection.plasticity to avoid decline. Environment to restore the phenotypes.
+Find a molecule to regulating the missing function. Egcg. Test on mouse.
+
+Test in human molecule + cognitive simulation
+Lab test + quality of life + neuroimagery.
+
+MRI and tms to validate the fact that connectivity is restored.
+
+Molecular rewroment
+
+Proteomics.b
+
+No targetic specific molecule but global change cbinaong different approay pharmacology/cognitive etc\ldots.
+
+
+\section{ABSTRACT RIN4}
+Session of the 20st of April :
+
+\begin{itemize}
+    \item Le con et les genes
+    \item l'epigeneticienne
+    \item le pysoclogue et ses souris qui ont peur avant de savoir
+    \item la traductrice en talon haut
+    \item la meuf et les velo dans barcelone
+    \item l'anthorpologue hipster bogoss qui bosse sur l'art
+    \item le paki et la 4G
+    \item la blonde et les planete
+    \item Simon Carrignon
+\end{itemize}
+
 \end{document}
 
 
