diver courant update

--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -11,6 +11,34 @@
 	year = "1995"
 }
 
+@article{turing1952thechemicalbasisofmorphogenesis,
+	abstract = "It is suggested that a system of chemical substances, called morphogens, reacting together and diffusing through a tissue, is adequate to account for the main phenomena of morphogenesis. Such a system, although it may originally be quite homogeneous, may later develop a pattern or structure due to an instability of the homogeneous equilibrium, which is triggered off by random disturbances. Such reaction-diffusion systems are considered in some detail in the case of an isolated ring of cells, a mathematically convenient, though biologically unusual system. The investigation is chiefly concerned with the onset of instability. It is found that there are six essentially different forms which this may take. In the most interesting form stationary waves appear on the ring. It is suggested that this might account, for instance, for the tentacle patterns on Hydra and for whorled leaves. A system of reactions and diffusion on a sphere is also considered. Such a system appears to account for gastrulation. Another reaction system in two dimensions gives rise to patterns reminiscent of dappling. It is also suggested that stationary waves in two dimensions could account for the phenomena of phyllotaxis. The purpose of this paper is to discuss a possible mechanism by which the genes of a zygote may determine the anatomical structure of the resulting organism. The theory does not make any new hypotheses; it merely suggests that certain well-known physical laws are sufficient to account for many of the facts. The full understanding of the paper requires a good knowledge of mathematics, some biology, and some elementary chemistry. Since readers cannot be expected to be experts in all of these subjects, a number of elementary facts are explained, which can be found in text-books, but whose omission would make the paper difficult reading.",
+	author = "Turing, A. M.",
+	doi = "10.1098/rstb.1952.0012",
+	eprint = "http://rstb.royalsocietypublishing.org/content/237/641/37.full.pdf",
+	issn = "0080-4622",
+	journal = "Philosophical Transactions of the Royal Society of London B: Biological Sciences",
+	localfile = "../pdfs/turing1952thechemicalbasisofmorphogenesis.pdf",
+	number = "641",
+	pages = "37--72",
+	publisher = "The Royal Society",
+	title = "{The Chemical Basis of Morphogenesis}",
+	url = "http://rstb.royalsocietypublishing.org/content/237/641/37",
+	volume = "237",
+	year = "1952"
+}
+
+@article{weaver1948scienceandcomplexity,
+	author = "Weaver, Warren",
+	journal = "American scientist",
+	localfile = "../pdfs/weaver1948scienceandcomplexity.pdf",
+	number = "4",
+	pages = "536--544",
+	title = "{Science and complexity.}",
+	volume = "36",
+	year = "1948"
+}
+
 @incollection{paolo00simulationmodelsasopaquethoughtexperiments,
 	abstract = {@InCollection{ paolo00simulationmodelsasopaquethoughtexperiments, author = "Ezequiel A. Di Paolo and Jason Noble and Seth Bullock", title = "Simulation Models as Opaque Thought Experiments", year = "2000", journal = "Artificial Life", year1 = "2002", month = "Winter", volume = "7", number = "1", pages = "497--506", abstract = {We review and critique a range of perspectives on the scientific role of individual-based evolutionary simulation models as they are used within artificial life. We find that such models have the potential to enrich existing modelling enterprises through their strength in modelling systems of interacting entities. Furthermore, simulation techniques promise to provide theoreticians in various fields with entirely new conceptual, as well as methodological, approaches. However, the precise manner in which simulations can be used as models is not clear. We present two apparently opposed perspectives on this issue: simulation models as \" emergent computational thought experiments\" and simulation models as realistic simulacra. Through analysing the role that armchair thought experiments play in science, we develop a role for simulation models as opaque thought experiments, that is, thought experiments in which the consequences follow from the premises, but in a non-obvious m...} }},
 	author = "Paolo, Ezequiel A. Di and Noble, Jason and Bullock, Seth",
@@ -699,6 +727,20 @@
 	title = "{The emergence of a price system from decentralized bilateral exchange}",
 	volume = "6",
 	year = "2006"
+}
+
+@article{rosenblueth1945theroleofmodelsinscience,
+	author = "Rosenblueth, Arturo and Wiener, Norbert",
+	issn = "00318248, 1539767X",
+	journal = "Philosophy of Science",
+	localfile = "../pdfs/rosenblueth1945theroleofmodelsinscience.pdf",
+	number = "4",
+	pages = "316--321",
+	publisher = "[University of Chicago Press, Philosophy of Science Association]",
+	title = "{The Role of Models in Science}",
+	url = "http://www.jstor.org/stable/184253",
+	volume = "12",
+	year = "1945"
 }
 
 @article{kahneman1979prospecttheoryananalysisofdecisionunderrisk,
@@ -1777,5 +1819,35 @@
 	title = "{Four Thousand Years of Urban Growth: An Historical Census}",
 	url = "https://books.google.es/books?id=81J4QgAACAAJ",
 	year = "1987"
+}
+
+@article{shannon1948amathematicaltheoryofcommunication,
+	author = "Shannon, C. E.",
+	doi = "10.1002/j.1538-7305.1948.tb01338.x",
+	issn = "1538-7305",
+	journal = "Bell System Technical Journal",
+	localfile = "../pdfs/shannon1948amathematicaltheoryofcommunication.pdf",
+	number = "3",
+	pages = "379--423",
+	publisher = "Blackwell Publishing Ltd",
+	title = "{A Mathematical Theory of Communication}",
+	url = "http://dx.doi.org/10.1002/j.1538-7305.1948.tb01338.x",
+	volume = "27",
+	year = "1948"
+}
+
+@article{minski1961stepstowardartificialintelligence,
+	author = "Minsky, M.",
+	doi = "10.1109/JRPROC.1961.287775",
+	issn = "0096-8390",
+	journal = "Proceedings of the IRE",
+	keywords = "Application software; Artificial intelligence; Environmental management; High performance computing; Information processing; Libraries; Military computing; Planets; Problem-solving; Technological innovation",
+	localfile = "../pdfs/minski1961stepstowardartificialintelligence.pdf",
+	month = "Jan",
+	number = "1",
+	pages = "8--30",
+	title = "{Steps toward Artificial Intelligence}",
+	volume = "49",
+	year = "1961"
 }
 
