--- a/doc/cours/PRBBSeminar/abstracs.tex
+++ b/doc/cours/PRBBSeminar/abstracs.tex
@@ -6,7 +6,7 @@
 
 \begin{document}
 
-\section{ABSTRACT Cell Communication}
+\section{ABSTRACT: Cell Communication}
 http://www.prbb.org/arxiu/event/1622
 \begin{itemize}
     \item Seminar Title: Principles underlying cells talking to each other with diffusing signals
@@ -123,7 +123,7 @@ Inject Gsk3beta antagonist to recreate the good axone. Tamura et al neurone 2016
 Reuse of the classifier. 
 
 
-\section{ABSTRACT Sampling and Social relasshion}
+\section{ABSTRACT: Sampling and Social relasshion}
 http://cbc.upf.edu/node/36187
 \begin{itemize}
     \item Seminar Title: Selective Information Sampling and Judgments in Social Environments.
@@ -154,11 +154,11 @@ The key mechanism is that the social environment exposes people to activities an
 
 
 \section{ABSTRACT: Intelectual Disability }
-21st of avril
+\begin{itemize}
     \item Seminar Title: Rembrandt: Remodelling brain development in intellectual disability 
     \item Speaker: Mara Dierssen
     \item Date: 20/04/2016
-    \item Abstract:Down syndrome (DS) is the most common genetic form of intellectual disability, with an estimated incidence of more than 200,000 cases per year worldwide. In DS brain, suboptimal network architecture and altered synaptic communication arising from neurodevelopmental impairment are key determinants of cognitive defects. Regardless of their molecular cause, most DSs are characterized by neural plasticity disruption, and therefore this is a natural target for therapeutic purposes. Our group has demonstrated that epigallocatechin-3-gallate (EGCG), the most abundant catechin of green tea, promotes learning and memory recovery, produces extensive dendritic remodeling in DS mouse models and significantly improves memory, executive functions and adaptive behavior along with increased functional connectivity in specific brain regions of DS adults (Phase I and Phase II clinical trials). This has been a crucial step in treating intellectual disability that has opened new important questions. 
+    \item Abstract: Down syndrome (DS) is the most common genetic form of intellectual disability, with an estimated incidence of more than 200,000 cases per year worldwide. In DS brain, suboptimal network architecture and altered synaptic communication arising from neurodevelopmental impairment are key determinants of cognitive defects. Regardless of their molecular cause, most DSs are characterized by neural plasticity disruption, and therefore this is a natural target for therapeutic purposes. Our group has demonstrated that epigallocatechin-3-gallate (EGCG), the most abundant catechin of green tea, promotes learning and memory recovery, produces extensive dendritic remodeling in DS mouse models and significantly improves memory, executive functions and adaptive behavior along with increased functional connectivity in specific brain regions of DS adults (Phase I and Phase II clinical trials). This has been a crucial step in treating intellectual disability that has opened new important questions. 
 \end{itemize}
 
 Neuroscience pharmacology. Neuropharmacology.
